force-app/main/default/objects/Product_Carbon_Footprint__c.object
<CustomObject>
    <description>Auditable record for reviewing what constitutes an emissions footprint for a specific product for a specific year.</description>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Footprint_Stage__c</fullName>
        <label>Footprint Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Emissions Source Confirmation</fullName>
                    <default>true</default>
                    <label>Emissions Source Confirmation</label>
                </value>
                <value>
                    <fullName>Data Collection</fullName>
                </value>
                <value>
                    <fullName>Data Validation</fullName>
                </value>
                <value>
                    <fullName>Internal Audit</fullName>
                </value>
                <value>
                    <fullName>External Audit</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Carbon Footprints</relationshipLabel>
        <relationshipName>Product_Carbon_Footprints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reporting_Date__c</fullName>
        <label>Reporting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reporting_Year__c</fullName>
        <label>Reporting Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scenario_Planner_Years</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Scope_1_Emissions_tCO2e__c</fullName>
        <label>Total Scope 1 Emissions (tCO2e)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Scope_2_LB_Emissions_tCO2e__c</fullName>
        <label>Total Scope 2 LB Emissions (tCO2e)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Scope_2_MB_Emissions_tCO2e__c</fullName>
        <label>Total Scope 2 MB Emissions (tCO2e)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Scope_3_Downstrm_Emissions_tCO2e__c</fullName>
        <label>Total Scope 3 Downstrm Emissions (tCO2e)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Scope_3_Upstream_Emissions_tCO2e__c</fullName>
        <label>Total Scope 3 Upstream Emissions (tCO2e)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>Product Carbon Footprint</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Carbon Footprint Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Carbon Footprints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>